# colza-ascent-pipeline

./: CMakeLists.txt
src/: README.md  colza-ascent-pipeline.cpp
